Archive2/a2/92a03da022712f/output
main.cpp:2:2: error: 'd4' does not name a type
  d4  d6  d8  d12
  ^
