Archive2/a2/92a03da022712f/main.cpp

 d4  d6  d8  d12
 1  [5]  1   1
 2  [6]  2   2
 3  [5]  3   3
 4  [6]  4   4
[1]  5   5   5
[2]  6   6   6
 1   1  [7   7]
 2   2  [8   8]
 1   1   1  [9]
 2   2   2  [10
 3   3   3  [11
 4   4   4  [12]
 1   1  [5]  1
 2   2  [6]  2
 3   3  [7]  3
 4   4  [8]  4
[3]  5   5   5
[4]  6   6   6
 3   3  [7   7]
 3   3  [8   8]
 1   1   1  [9]
 2   2   2  [10]
 3   3   3  [11]
 4   4   4  [12]